--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,14 @@
   font-size: large;
 }
 
+#search-jumbo {
+  background-color: #8884d8;
+  color: #f5f5f5;
+}
+#search-jumbo input {
+  color: #181818;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
